@@ -61,7 +61,11 @@
 # Apply changes to balance/unspent.txt after each send
 #apply2bal=false
 
+# Create RFC6979 deterministic ECDSA signatures
+#rfc6979=true
+
 # Make sure R and S inside ECDSA signatures are only 32 bytes long (keep signing until OK)
+# Note: it will be ignored when RFC6979 is used (see above).
 #minsig=true
 
 # Specify deposit address type dumped by the wallet (when using -list option)
