@@ -26,6 +26,8 @@
 * Wallet: do not offer to save the password when "-p" switch was used
 * Wallet: "-words" and "-xprv" now prevent tx signing and no longer need to be used together with "-l"
 * Client: Fixed wallet.GetAllUnspent() for P2WSH address types (had to be broken unnoticed since Taproot was added)
+* Lib: btc.EcdsaSign() can now create deterministc signatures, as per RFC6979
+* Wallet: new command/config switch "rfc6979" to create  RFC6979 deterministic signatures
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
